# Coder101

./: .gdbinit  Low_Level_Driver_Configuration_Guide.md  Makefile  README.md  goals.md  interview_prep.md  perf.data  test.txt
CODE_PRACTICE/: .clangd  .cproject  .project  CMakeLists.txt  exercise_main
CODE_PRACTICE/.launch/: debug_exercise_main.launch
CODE_PRACTICE/Exercise/: CMakeLists.txt  Makefile  embedded_c_interview_questions.md  example.txt
CODE_PRACTICE/Exercise/src/: main  main.c  main.h  test.py
CODE_PRACTICE/Exercise/src/ds/src/: heap.c  linklist  linklist.c  prime_number.c  reverse_number.c
CODE_PRACTICE/Exercise/src/ds/src/linklist.dSYM/Contents/Resources/DWARF/: linklist
CODE_PRACTICE/Exercise/src/ds/src/linklist.dSYM/Contents/Resources/Relocations/aarch64/: linklist.yml
CODE_PRACTICE/Exercise/src/main.dSYM/Contents/Resources/DWARF/: main
CODE_PRACTICE/Exercise/src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
ZephyrSettings/: launch_Setting
src/: temp.c
src/TCPL/: Ch_1  Ch_1.c  Ch_2  Ch_2.c  Ch_3.c  Ch_4.c  Ch_5.c  Ch_6.c  Ch_7.c  Ch_8.c  learning.txt  sort.c  test.txt
src/TCPL/Ch_5.dSYM/Contents/: Info.plist
src/TCPL/Ch_5.dSYM/Contents/Resources/DWARF/: Ch_5
src/c/: linux.c  temp.c  test.c  testmain.c
src/c/TCPL/: Ch_1  Ch_1.c  Ch_2.c  Ch_3  Ch_4  Ch_5  Ch_6.c  Ch_7.c  Ch_8.c
src/c/TCPL/Ch_5.dSYM/Contents/Resources/Relocations/aarch64/: Ch_5.yml
src/cpp/: .ch4.cpp.swp  ch4.cpp  main.cpp
src/linux/Linux-Kernel-Programming_2E/: README.md
src/linux/Linux-Kernel-Programming_2E/ch1/: pkg_install4ubuntu_lkp.sh
